# rustedjs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: librustedjs.rs  rustedjscmd.rs
tests/example/: test1.js  test2.js
